# open-alex-rust

./: Cargo.toml  openAlex.http  surreal.http  test.http
src/: lib.rs  main.rs  surreal_client.rs
