[package]
name = "open-alex-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
eyre = "0.6.8"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = {version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
surrealdb-rs = { git = "https://github.com/surrealdb/surrealdb.rs", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
